--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jquery",
   "title": "jQuery",
   "description": "JavaScript library for DOM operations",
-  "version": "2.2.4",
+  "version": "2.2.5-sec",
   "main": "dist/jquery.js",
   "homepage": "http://jquery.com",
   "author": {
@@ -27,6 +27,7 @@
   "devDependencies": {
     "commitplease": "2.0.0",
     "core-js": "0.9.17",
+    "dompurify": "^2.3.6",
     "grunt": "0.4.5",
     "grunt-babel": "5.0.1",
     "grunt-cli": "0.1.13",
@@ -53,7 +54,8 @@
   "scripts": {
     "build": "npm install && grunt",
     "start": "grunt watch",
-    "test": "grunt && grunt test"
+    "test": "grunt && grunt test",
+    "test:php": "echo 'browse to http://localhost:8000/test/index.html' ; php -S localhost:8000"
   },
   "commitplease": {
     "components": [
